--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -1,240 +1,206 @@
-<!DOCTYPE html>
-<html lang="es">
-  {% load static %}
+{% extends 'app/base.html' %} {% block contenido %}
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>"Librería imagina"</title>
-    <!--foto pequeña de flores ,de la parte superior -->
-    <link
-      rel="shortcut icon"
-      href="{% static 'app/img/favicon.png' %}"
-      type="image/x-icon"
-    />
-    <!--foto pequeña de flores ,de la parte superior -->
+<!--DENTRO DE HEADER VA EL NAVBAR QUE ES LA BARRA DE NAVEGACION SUPERIOR-->
+<header class="header" id="header">
+  <nav class="navbar navbar-expand-sm bg-info navbar-light">
+    <div class="container-fluid">
+      <img
+        src="../static/app/img/libro.png "
+        alt=""
+        style="width: 50px; border-radius: 50%"
+      />
+      <!--border-raduis le da forma circular al icono -->
 
-    <!--Boostrap 5.1.3-->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-  </head>
-
-  <body>
-    <!--DENTRO DE HEADER VA EL NAVBAR QUE ES LA BARRA DE NAVEGACION SUPERIOR-->
-    <header class="header" id="header">
-      <nav class="navbar navbar-expand-sm bg-info navbar-light">
-        <div class="container-fluid">
-          <img
-            src="{% static 'app/img/libro.png' %}"
-            alt=""
-            style="width: 50px; border-radius: 50%"
-          />
-          <!--border-raduis le da forma circular al icono -->
-
-          <!--AQUI SE ENCUENTRA EL BOTON QUE SE DESPLIEGA HACIA ABAJO EN EL NAVBAR CON SU RESPECTVIOS LINKS-->
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#collapsibleNavbar"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="../index">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../nosotros">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  data-bs-toggle="tooltip"
-                  title="¡AQUÍ PUEDES REGISTRARTE!"
-                  href="../registro"
-                  >Registrarse</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link"
-                  data-bs-toggle="tooltip"
-                  title="¡AQUÍ PUEDES INICIAR SESIÓN!"
-                  href="{% url 'login' %}"
-                  >Iniciar sesión</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
-    <!--DENTRO DE HEADER VA EL NAVBAR QUE ES LA BARRA DE NAVEGACION SUPERIOR-->
-
-    <div class="main" id="main">
-      <!--CONTENEDOR CON LA FOTO DE FONDO CON WHIDTH 100% PARA QUE SE ADAPTE SI ES DISPOSITIVO MOVIL Y NO SEA VEA SOLO UNA PARTE DE LA IMAGEN-->
-      <section class="py-2 text-center container-fluid">
-        <!--py-2 para que no quede pegado ni muy separado del navbar-->
-
-        <img src="{% static 'app/img/probando5.jpeg' %} " alt="" width="100%" />
-        <div class="row py-lg-5">
-          <div class="col-lg-6 col-md-8 mx-auto">
-            <!--DENTRO DEL CLASS ES EL TIPO DE LETRA-->
-            <h1 class="fw-dark display-1">Librería "imagina"</h1>
-            <p class="lead text-muted display-6">
-              En este sitio web podrás encontrar los mejores libros de todo
-              tipo, de cualquier editorial y siempre siendo fieles a nuestros
-              mejores precios.
-            </p>
-          </div>
-        </div>
-      </section>
-      <!--CONTENEDOR CON LA FOTO DE FONDO CON WHIDTH 100% PARA QUE SE ACHIQUE SI ES MODO MOVIL Y NO SEA VEA SOLO UNA PARTE DE LA IMAGEN-->
-
-      <!--BARRA PLOMA QUE ENCIERRA LOS CONTAINER-->
-      <section class="thumbnail 1" id="thumbnail 1">
-        <div class="Thumbnail py-5 bg-light">
-          <!--CONTENEDOR PLOMO QUE ENCIERRA LOS CONTAINER-->
-
-          <div class="container-fluid">
-            <!-- CONTENEDOR-fluid para que el contenedor ocupe los 12 espacios que nos ofrece boostrap  -->
-
-            <div
-              class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 align-items-center"
+      <!--AQUI SE ENCUENTRA EL BOTON QUE SE DESPLIEGA HACIA ABAJO EN EL NAVBAR CON SU RESPECTVIOS LINKS-->
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#collapsibleNavbar"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="../index">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../nosotros">Nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              data-bs-toggle="tooltip"
+              title="¡AQUÍ PUEDES REGISTRARTE!"
+              href="../registro"
+              >Registrarse</a
             >
-              <!--comando aling aliniea los 3 itemps-->
-              <!--IMAGEN DE LA IZQUIERDA-->
-              <div class="col">
-                <div class="card shadow-sm">
-                  <img
-                    src="{% static 'app/img/artesmuni.jpg' %}"
-                    alt=""
-                    height="324"
-                    width="100%"
-                  />
-                  <div class="card-body">
-                    <div class="d-flex justify-content-center">
-                      <h3>Manualidades</h3>
-                    </div>
-                    <div>
-                      Taller entretenido para que puedas dibujar lo que te
-                      plasca o pintar modelos ya hechos previamente (horario
-                      12:30 a 14:00)
-                    </div>
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link"
+              data-bs-toggle="tooltip"
+              title="¡AQUÍ PUEDES INICIAR SESIÓN!"
+              href="{% url 'login' %}"
+              >Iniciar sesión</a
+            >
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+<!--DENTRO DE HEADER VA EL NAVBAR QUE ES LA BARRA DE NAVEGACION SUPERIOR-->
 
-                    <div class="d-flex justify-content-center">
-                      <h3>¡Si quieres participar registrate!</h3>
-                    </div>
+<div class="main" id="main">
+  <!--CONTENEDOR CON LA FOTO DE FONDO CON WHIDTH 100% PARA QUE SE ADAPTE SI ES DISPOSITIVO MOVIL Y NO SEA VEA SOLO UNA PARTE DE LA IMAGEN-->
+  <section class="py-2 text-center container-fluid">
+    <!--py-2 para que no quede pegado ni muy separado del navbar-->
 
-                    <div class="d-flex justify-content-center">
-                      <a
-                        href="../registro"
-                        class="btn btn-warning my-2"
-                        data-bs-toggle="tooltip"
-                        title="¡AQUÍ PUEDES REGISTRARTE!"
-                        >Registrarse gratis</a
-                      >
-                    </div>
-                  </div>
+    <img src="../static/app/img/probando5.jpeg " alt="" width="100%" />
+    <div class="row py-lg-5">
+      <div class="col-lg-6 col-md-8 mx-auto">
+        <!--DENTRO DEL CLASS ES EL TIPO DE LETRA-->
+        <h1 class="fw-dark display-1">Librería "imagina"</h1>
+        <p class="lead text-muted display-6">
+          En este sitio web podrás encontrar los mejores libros de todo tipo, de
+          cualquier editorial y siempre siendo fieles a nuestros mejores
+          precios.
+        </p>
+      </div>
+    </div>
+  </section>
+  <!--CONTENEDOR CON LA FOTO DE FONDO CON WHIDTH 100% PARA QUE SE ACHIQUE SI ES MODO MOVIL Y NO SEA VEA SOLO UNA PARTE DE LA IMAGEN-->
+
+  <!--BARRA PLOMA QUE ENCIERRA LOS CONTAINER-->
+  <section class="thumbnail 1" id="thumbnail 1">
+    <div class="Thumbnail py-5 bg-light">
+      <!--CONTENEDOR PLOMO QUE ENCIERRA LOS CONTAINER-->
+
+      <div class="container-fluid">
+        <!-- CONTENEDOR-fluid para que el contenedor ocupe los 12 espacios que nos ofrece boostrap  -->
+
+        <div
+          class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 align-items-center"
+        >
+          <!--comando aling aliniea los 3 itemps-->
+          <!--IMAGEN DE LA IZQUIERDA-->
+          <div class="col">
+            <div class="card shadow-sm">
+              <img
+                src="../static/app/img/lib1.jpeg "
+                alt=""
+                height="324"
+                width="100%"
+              />
+              <div class="card-body">
+                <div class="d-flex justify-content-center">
+                  <h3>El Señor de los Anillos Trilogía</h3>
                 </div>
-              </div>
-              <!--IMAGEN DE LA IZQUIERDA-->
-
-              <!--IMAGEN DEL CENTRO-->
-              <div class="col">
-                <div class="card shadow-sm">
-                  <img
-                    src="{% static 'app/img/baile.jpg' %}"
-                    alt=""
-                    height="324"
-                    width="100%"
-                  />
-                  <div class="card-body">
-                    <div class="d-flex justify-content-center">
-                      <h3>Baile</h3>
-                    </div>
-                    <div>
-                      Taller dinámico para bailar cualquier tipo de música y que
-                      los recuerdos estén presentes(horario 16:30 a 18:00)
-                    </div>
-                    <div class="d-flex justify-content-center">
-                      <h3>¡Si quieres participar registrate!</h3>
-                    </div>
-
-                    <div class="d-flex justify-content-center">
-                      <a
-                        href="../registro"
-                        class="btn btn-warning my-2"
-                        data-bs-toggle="tooltip"
-                        title="¡AQUÍ PUEDES REGISTRARTE!"
-                        >Registrarse gratis</a
-                      >
-                    </div>
-                  </div>
+                <div>
+                  Un anillo para gobernarlos a todos, un anillo para
+                  encontrarlos, un anillo para atraerlos a todos y atarlos en
+                  las Tinieblas". La vida de los hombres y de toda la vida de la
+                  Tierra Media depende de un joven hobbit.
                 </div>
-              </div>
-              <!--IMAGEN DEL CENTRO-->
 
-              <!--IMAGEN DE LA DERECHA-->
-              <div class="col">
-                <div class="card shadow-sm">
-                  <img
-                    src="{% static 'app/img/index2.jpg' %}"
-                    alt=""
-                    height="324 "
-                    width="100%"
-                  />
-                  <div class="card-body">
-                    <div class="d-flex justify-content-center">
-                      <h3>Ejercicio</h3>
-                    </div>
-                    <div>
-                      Taller enfocado a realizar un poco de ejercicio con un
-                      especialista kinesiológico (horario 14:30 a 16:00)
-                    </div>
-                    <div class="d-flex justify-content-center">
-                      <h3>¡Si quieres participar registrate!</h3>
-                    </div>
-                    <div class="d-flex justify-content-center">
-                      <a
-                        href="../registro"
-                        class="btn btn-warning my-2"
-                        data-bs-toggle="tooltip"
-                        title="¡AQUÍ PUEDES REGISTRARTE!"
-                        >Registrarse gratis</a
-                      >
-                    </div>
-                  </div>
+                <div class="d-flex justify-content-center">
+                  <h4>¡Si quieres comprar registrate!</h4>
+                </div>
+
+                <div class="d-flex justify-content-center">
+                  <a
+                    href="../registro"
+                    class="btn btn-success my-2"
+                    data-bs-toggle="tooltip"
+                    title="¡AQUÍ PUEDES REGISTRARTE!"
+                    >Registrarse gratis</a
+                  >
                 </div>
               </div>
             </div>
-            <!--IMAGEN DE LA DERECHA-->
-            <!--IMAGEN DE LA DERECHA-->
+          </div>
+          <!--IMAGEN DE LA IZQUIERDA-->
+
+          <!--IMAGEN DEL CENTRO-->
+          <div class="col">
+            <div class="card shadow-sm">
+              <img
+                src="../static/app/img/harrycolecionista.png "
+                alt=""
+                height="324"
+                width="100%"
+              />
+              <div class="card-body">
+                <div class="d-flex justify-content-center">
+                  <h3>Harry Potter Trilogía</h3>
+                </div>
+                <div>
+                  Hazte de la colección completa de los libros de Harry Potter,
+                  la saga más mágica de todos los tiempos. en una edición
+                  renovada con las siete novelas. Contando con el rediseño de
+                  cubierta a cargo del galardonado ilustrador Jonny Duddle.
+                </div>
+                <div class="d-flex justify-content-center">
+                  <h4>¡Si quieres comprar registrate!</h4>
+                </div>
+
+                <div class="d-flex justify-content-center">
+                  <a
+                    href="../registro"
+                    class="btn btn-success my-2"
+                    data-bs-toggle="tooltip"
+                    title="¡AQUÍ PUEDES REGISTRARTE!"
+                    >Registrarse gratis</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--IMAGEN DEL CENTRO-->
+
+          <!--IMAGEN DE LA DERECHA-->
+          <div class="col">
+            <div class="card shadow-sm">
+              <img
+                src="../static/app/img/alines.jpg "
+                alt=""
+                height="324 "
+                width="100%"
+              />
+              <div class="card-body">
+                <div class="d-flex justify-content-center">
+                  <h3>Aliens</h3>
+                </div>
+                <div>
+                  La trilogía de libros de la película "Aliens" es una serie de
+                  novelas de ciencia ficción escritas por el autor
+                  estadounidense Alan Dean Foster. La serie se basa en la
+                  exitosa franquicia de películas de "Aliens", creada por el
+                  director James Cameron.
+                </div>
+                <div class="d-flex justify-content-center">
+                  <h4>¡Si quieres comprar registrate!</h4>
+                </div>
+                <div class="d-flex justify-content-center">
+                  <a
+                    href="../registro"
+                    class="btn btn-success my-2"
+                    data-bs-toggle="tooltip"
+                    title="¡AQUÍ PUEDES REGISTRARTE!"
+                    >Registrarse gratis</a
+                  >
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-      </section>
+        <!--IMAGEN DE LA DERECHA-->
+        <!--IMAGEN DE LA DERECHA-->
+      </div>
     </div>
+  </section>
+</div>
 
-    <!--Parte final de la pagina el footer-->
-    <footer class="py-3 my-4">
-      <ul class="nav justify-content-center border-bottom pb-3 mb-3 bg-warning">
-        <li class="nav-item">
-          <a href="../index" class="nav-link px-2 text-muted">Inicio</a>
-        </li>
-        <li class="nav-item">
-          <a href="../nosotros" class="nav-link px-2 text-muted">Nosotros</a>
-        </li>
-      </ul>
-      <p class="text-center text-muted">
-        &copy; 2022 Municipalidad "Talleres adultos mayores", Inc
-      </p>
-    </footer>
-    <!--Parte final de la pagina el footer-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
-</html>
+{% endblock %}
