--- a/app/templates/app/lista_libros.html
+++ b/app/templates/app/lista_libros.html
@@ -1,20 +1,108 @@
-{% load static %}
-<h1>Lista de libros</h1>
-{% for libro in libros %}
-<div class="card">
-  <div class="card-body">
-    <h5 class="card-title">{{ libro.nombre }}</h5>
+{% extends 'app/base.html' %} {% block contenido %}
+<header class="header" id="header">
+  <nav class="navbar navbar-expand-sm bg-info navbar-light">
+    <div class="container-fluid">
+      <img
+        src="../static/app/img/libro.png "
+        alt=""
+        style="width: 50px; border-radius: 50%"
+      />
+      <!--border-raduis le da forma circular al icono -->
 
-    <p class="card-text"><strong>Precio: ${{ libro.precio }}</strong></p>
-    <form method="POST" action="{% url 'agregar_al_carrito' %}">
-      {% csrf_token %}
-      <input type="hidden" name="libro_id" value="{{ libro.id }}" />
-      <label for="cantidad">Cantidad:</label>
-      <input type="number" id="cantidad" name="cantidad" value="{{
-      carrito.cantidad|default_if_none:"1" }}" min="1" />
+      <!--AQUI SE ENCUENTRA EL BOTON QUE SE DESPLIEGA HACIA ABAJO EN EL NAVBAR CON SU RESPECTVIOS LINKS-->
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#collapsibleNavbar"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="../servicioform">Solicitiar Servicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../lista_libros">¡ Ir a la tienda !</a>
+          </li>
 
-      <button type="submit" class="btn btn-primary">Agregar al carrito</button>
-    </form>
+          <li class="nav-item">
+            <a class="nav-link" href="../ver_carrito">Ver mi carrito </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+<!--DENTRO DE HEADER VA EL NAVBAR QUE ES LA BARRA DE NAVEGACION SUPERIOR-->
+<div class="main container-fluid">
+  <div class="m-1 container-fluid">
+    <div class="row">
+      {% for libro in libros %}
+      <div class="col-sm-4 justify-content-center d-flex">
+        <div class="m-3 card" style="width: 400px">
+          {% if libro.imagen %}
+          <img src=" aux.imagen.url " width="80%" />
+          {% else %}
+          <img
+            src="../static/app/img/equipo.png"
+            class="img-fluid item-img w-0 mb-0"
+          />
+          {% endif %}
+          <div class="card-body">
+            <div class="d-flex justify-content-center m-1">
+              <h4 class="card-title">{{libro.nombre}}</h4>
+            </div>
+
+            <div class="d-flex justify-content-center m-1">
+              <p class="card-text">Autor: {{libro.autor}}</p>
+            </div>
+            <div class="d-flex justify-content-center m-1">
+              <p class="card-text">Editorial: {{libro.editorial}}</p>
+            </div>
+            <div class="d-flex justify-content-center m-1">
+              <p class="card-text">Stock: {{libro.stock}}</p>
+            </div>
+            <div class="d-flex justify-content-center m-1">
+              <p class="card-text">
+                <strong>Precio: ${{ libro.precio }}</strong>
+              </p>
+            </div>
+            <form method="POST" action="{% url 'agregar_al_carrito' %}">
+              {% csrf_token %}
+              <input type="hidden" name="libro_id" value="{{ libro.id }}" />
+              <div class="d-flex justify-content-center m-1">
+                <label for="cantidad">Cantidad:</label>
+                <input type="number" id="cantidad" name="cantidad" value="{{
+                carrito.cantidad|default_if_none:"1" }}" min="1" />
+              </div>
+              <div class="d-flex justify-content-center m-3">
+                <button type="submit" class="btn btn-success btn-sm">
+                  Agregar al carrito
+                </button>
+                {% if messages %}
+
+                <!-- <script>alert(1) </script> -->
+                {% for msj in messages %}
+                <!-- <script>alert(2) </script>  -->
+                <!-- <p>{{ msj }}</p>  -->
+                <script>
+                  Swal.fire({
+                    title: "Libro agregado al carrito correctamente!",
+                    text: "{{ msj }}",
+                    icon: "success",
+                    showConfirmButton: false,
+                    timer: 2000,
+                  });
+                </script>
+                {% endfor %} {% endif %}
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
-{% endfor %}
+{% endfor %} {% endblock %}
