--- a/app/templates/app/lista_libros.html
+++ b/app/templates/app/lista_libros.html
@@ -1,41 +1,9 @@
-{% extends 'app/base.html' %} {% block contenido %}
-<header class="header" id="header">
-  <nav class="navbar navbar-expand-sm bg-info navbar-light">
-    <div class="container-fluid">
-      <img
-        src="../static/app/img/libro.png "
-        alt=""
-        style="width: 50px; border-radius: 50%"
-      />
-      <!--border-raduis le da forma circular al icono -->
+{% extends 'app/base.html' %}
+{% block contenido %}
+{% block navbar %}
+  {% include 'app/basecliente.html' %}
+  {% endblock %}
 
-      <!--AQUI SE ENCUENTRA EL BOTON QUE SE DESPLIEGA HACIA ABAJO EN EL NAVBAR CON SU RESPECTVIOS LINKS-->
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#collapsibleNavbar"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="../servicioform">Solicitiar Servicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../lista_libros">¡ Ir a la tienda !</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="../ver_carrito">Ver mi carrito </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</header>
-<!--DENTRO DE HEADER VA EL NAVBAR QUE ES LA BARRA DE NAVEGACION SUPERIOR-->
 <div class="main container-fluid">
   <div class="m-1 container-fluid">
     <div class="row">
@@ -46,7 +14,7 @@
           <img src=" aux.imagen.url " width="80%" />
           {% else %}
           <img
-            src="../static/app/img/equipo.png"
+            src="../static/app/img/imagenlibros.jpg"
             class="img-fluid item-img w-0 mb-0"
           />
           {% endif %}
@@ -105,4 +73,15 @@
     </div>
   </div>
 </div>
+<ul class="nav d-flex justify-content-center">
+  <li class="nav-item d-flex justify-content-center">
+    <a
+      class="nav-link"
+      href="../listar_cliente"
+      data-bs-toggle="tooltip"
+      title="¡AQUÍ PUEDES VOLVER A TU PERFIL!"
+      >Volver al perfil</a
+    >
+  </li>
+</ul>
 {% endfor %} {% endblock %}
