--- a/app/templates/app/listar_cliente.html
+++ b/app/templates/app/listar_cliente.html
@@ -1,42 +1,7 @@
 {% extends 'app/base.html' %} {% block contenido %}
-<!--DENTRO DE HEADER VA EL NAVBAR QUE ES LA BARRA DE NAVEGACION SUPERIOR-->
-<header class="header" id="header">
-  <nav class="navbar navbar-expand-sm bg-info navbar-light">
-    <div class="container-fluid">
-      <img
-        src="../static/app/img/libro.png "
-        alt=""
-        style="width: 50px; border-radius: 50%"
-      />
-      <!--border-raduis le da forma circular al icono -->
-
-      <!--AQUI SE ENCUENTRA EL BOTON QUE SE DESPLIEGA HACIA ABAJO EN EL NAVBAR CON SU RESPECTVIOS LINKS-->
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#collapsibleNavbar"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="../servicioform">Solicitiar Servicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="../lista_libros">¡ Ir a la tienda !</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="../ver_carrito">Ver mi carrito </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</header>
-<!--DENTRO DE HEADER VA EL NAVBAR QUE ES LA BARRA DE NAVEGACION SUPERIOR-->
+{% block navbar %}
+  {% include 'app/basecliente.html' %}
+{% endblock %}
 <section class="thumbnail 1" id="thumbnail 1">
   <div class="Thumbnail py-2 bg-light">
     <!--CONTENEDOR PLOMO QUE ENCIERRA LOS CONTAINER-->
