--- a/app/templates/app/ver_carrito.html
+++ b/app/templates/app/ver_carrito.html
@@ -1,4 +1,7 @@
-{% load static %}
+{% extends 'app/base.html' %} {% block contenido %}
+{% block navbar %}
+  {% include 'app/basecliente.html' %}
+{% endblock %}
 <h1>Carrito de compras</h1>
 {% if carrito %}
 <table class="table">
@@ -37,8 +40,25 @@
 </table>
 <form method="POST" action="#">
   {% csrf_token %}
-  <button type="submit" class="btn btn-primary">Realizar compra</button>
+  <div class="d-flex justify-content-center">
+    <button type="submit" class="btn btn-success">Realizar compra</button>
+  </div>
 </form>
 {% else %}
 <p>No hay productos en el carrito.</p>
-{% endif %}
+
+{% endif %} 
+
+<ul class="nav d-flex justify-content-center">
+  <li class="nav-item d-flex justify-content-center">
+    <a
+      class="nav-link"
+      href="../listar_cliente"
+      data-bs-toggle="tooltip"
+      title="¡AQUÍ PUEDES VOLVER A TU PERFIL!"
+      >Volver al perfil</a
+    >
+  </li>
+</ul>
+
+{% endblock %}
