--- a/app/templates/app/listar_servicio.html
+++ b/app/templates/app/listar_servicio.html
@@ -17,6 +17,7 @@
             <thead>
               <tr class="table-success">
                 <th>Fecha servicio</th>
+                <th>Hora servicio</th>
                 <th>Dirección servicio</th>
                 <th>Detalle servicio</th>
                 <th>Rut tecnico</th>
@@ -28,9 +29,10 @@
             <tbody>
               {% for aux in listaServicio %}
                   {% for x in listaTecnico %}
-                      {% if aux.rut_tecnico == aux.rut_tecnico %}
+                      {% if x.rut_tecnico == x.rut_tecnico %}
                           <tr>
                               <td>{{ aux.fecha_servicio }}</td>
+                              <td>{{ aux.hora_servicio }}</td>
                               <td>{{ aux.direccion_servicio }}</td>
                               <td>{{ aux.detalle_servicio }}</td>
                               <td>{{ x.rut_tecnico }}</td>
