--- a/app/templates/app/basempleado.html
+++ b/app/templates/app/basempleado.html
@@ -20,21 +20,13 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="../servicioform">Solicitiar Servicio</a>
+            <a class="nav-link" href="../listar_cotizaciones">Ver solicitudes de cotizaciones</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../listar_servicio">Ver solicitudes de servicio</a>
+            <a class="nav-link" href="../listar_personas">Gestion de cuentas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../cotizacionesform">Solicitar cotizacion</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="../lista_libros">¡ Ir a la tienda !</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="../ver_carrito">Ver mi carrito </a>
+            <a class="nav-link" href="https://accounts.google.com/signin/chrome/sync/identifier?ssp=1&continue=https%3A%2F%2Fwww.google.com%2F&flowName=GlifDesktopChromeSync">Responder cotizaciones por correo</a>
           </li>
         </ul>
       </div>
