--- a/app/templates/app/listar_personas.html
+++ b/app/templates/app/listar_personas.html
@@ -1,6 +1,6 @@
 {% extends 'app/base.html' %} {% block contenido %}
 {% block navbar %}
-  {% include 'app/basetecnico.html' %}
+  {% include 'app/basempleado.html' %}
 {% endblock %}
 <section class="thumbnail 1" id="thumbnail 1">
   <div class="Thumbnail py-2 bg-light">
@@ -23,38 +23,48 @@
                 <th>Dirección</th>
                 <th>Celular</th>
                 <th>E-mail</th>
+                <th>Numero de tarjeta</th>
+              
+                
               </tr>
             </thead>
             <tbody>
-              {% for aux in listaTecnico %}
+              {% for aux in listaClientes %}
 
               <tr>
                 <td>
                   {% if aux.imagen %}
-                  <img src=" aux.imagen.url " />
+                  <img src=" aux.imagen.url "  />
                   {% else %}
                   <img
                     src="../static/app/img/equipo.png"
-                    style="width: 40%; max-width: 80%;"
+                    style="width: 80%; max-width: 80%;"
                   />
                   {% endif %}
                 </td>
 
-                <td>{{aux.rut_tecnico}}</td>
+                <td>{{aux.rut_empleado}}</td>
                 <td>{{aux.nombre}}</td>
                 <td>{{aux.apellido}}</td>
                 <td>{{aux.direccion}}</td>
                 <td>{{aux.telefono}}</td>
+                <td>{{aux.correo}}</td>
+                <td>{{aux.numero_tarjeta}}</td>
                 <td>
-                  {{aux.correo}}
+                  {{aux.departamento}}
                   <div class="d-flex" id="modifi">
                     <a
-                      href="{% url 'modifitecnico' aux.id %}"
+                      href="{% url 'modificliempleado' aux.id %}"
                       class="btn btn-info btn-sm"
                       data-bs-toggle="tooltip"
                       title="¡AQUÍ PUEDES MODIFICAR LOS DATOS!"
                       >Modificar datos</a
                     >
+                  </div>
+                  <div class="d-flex" id="elimi">
+                    <a href="{% url 'eliminarpersona' aux.id %}" class="btn btn-danger btn-sm" data-bs-toggle="tooltip"
+                      title="¡AQUÍ PUEDES ELIMINAR LOS DATOS!">Eliminar datos</a>
+
                   </div>
                 </td>
               </tr>
@@ -67,25 +77,7 @@
           <table class="table">
             <tbody>
               <tr>
-                <td>
-                  {% if cantidad_tecnicos > 0 %}
-                  <a
-                    href="#"
-                    class="btn btn-success bg-success disabled"
-                    data-bs-toggle="tooltip"
-                    title="Ya has agregado tus datos"
-                    >Ya has agregado tus datos</a
-                  >
-                  {% else %}
-                  <a
-                    href="{% url 'tecnicoform' %}"
-                    class="btn btn-success bg-success"
-                    data-bs-toggle="tooltip"
-                    title="Agrega tus datos"
-                    >Agrega tus datos</a
-                  >
-                  {% endif %} 
-                </td>
+                
                 <td>
                   <a
                     href="{% url 'logout' %}"
