--- a/app/templates/app/ver_carrito.html
+++ b/app/templates/app/ver_carrito.html
@@ -7,6 +7,7 @@
 <table class="table">
   <thead>
     <tr>
+      
       <th scope="col">Libro</th>
       <th scope="col">Cantidad</th>
       <th scope="col">Precio</th>
@@ -16,8 +17,19 @@
   </thead>
   <tbody>
     {% for item in carrito %}
+    
     <tr>
-      <td>{{ item.libro.nombre }}</td>
+      
+      <td>
+        {% if item.imagen %}
+          <img src=" aux.imagen.url "/>
+          {% else %}
+          <img
+            src="../static/app/img/imagenlibros.jpg"
+            class="img-thumbnail" style="width: 10%; max-width: 50%;"
+          />
+          {% endif %}
+        {{ item.libro.nombre }}</td>
       <td>{{ item.cantidad }}</td>
       <td>${{ item.libro.precio }}</td>
       <td>${{ item.subtotal }}</td>
