--- a/app/templates/app/basetecnico.html
+++ b/app/templates/app/basetecnico.html
@@ -23,6 +23,9 @@
               <a class="nav-link" href="../listar_serviciotec">Ver solicitudes de servicio</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="../listar_materiales">Ver materiales disponibles</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="https://accounts.google.com/signin/chrome/sync/identifier?ssp=1&continue=https%3A%2F%2Fwww.google.com%2F&flowName=GlifDesktopChromeSync">Enviar correos</a>
             </li>
           </ul>
