--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -37,7 +37,11 @@
   </head>
 
   <body>
-    {% block contenido %} {% endblock %}
+    {% block contenido %} 
+    
+    
+    
+    {% endblock %}
     
     <!--Parte final de la pagina el footer-->
     <footer class="py-3 my-4">
