--- a/app/templates/app/basecliente.html
+++ b/app/templates/app/basecliente.html
@@ -36,6 +36,9 @@
           <li class="nav-item">
             <a class="nav-link" href="../ver_carrito">Ver mi carrito </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../starken_api">Seguimiento de productos </a>
+          </li>
         </ul>
       </div>
     </div>
