--- a/app/templates/app/basempleado.html
+++ b/app/templates/app/basempleado.html
@@ -25,8 +25,13 @@
           <li class="nav-item">
             <a class="nav-link" href="../listar_personas">Gestion de cuentas</a>
           </li>
+
           <li class="nav-item">
             <a class="nav-link" href="https://accounts.google.com/signin/chrome/sync/identifier?ssp=1&continue=https%3A%2F%2Fwww.google.com%2F&flowName=GlifDesktopChromeSync">Responder cotizaciones por correo</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="../libros_api">Proveedor alphilia libros</a>
           </li>
         </ul>
       </div>
