--- a/app/templates/app/basecliente.html
+++ b/app/templates/app/basecliente.html
@@ -1,20 +1,11 @@
 <header class="header" id="header">
   <nav class="navbar navbar-expand-sm bg-info navbar-light">
     <div class="container-fluid">
-      <img
-        src="../static/app/img/libro.png "
-        alt=""
-        style="width: 50px; border-radius: 50%"
-      />
+      <img src="../static/app/img/libro.png " alt="" style="width: 50px; border-radius: 50%" />
       <!--border-raduis le da forma circular al icono -->
 
       <!--AQUI SE ENCUENTRA EL BOTON QUE SE DESPLIEGA HACIA ABAJO EN EL NAVBAR CON SU RESPECTVIOS LINKS-->
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#collapsibleNavbar"
-      >
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
@@ -26,11 +17,11 @@
             <a class="nav-link" href="../listar_servicio">Ver solicitudes de servicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../cotizacionesform">Solicitar cotizacion</a>
+            <a class="nav-link" href="../cotizacionesform">Solicitar cotización</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="../lista_libros">¡ Ir a la tienda !</a>
+            <a class="nav-link" href="../lista_libros">¡Ir a la tienda!</a>
           </li>
 
           <li class="nav-item">
@@ -44,6 +35,6 @@
     </div>
   </nav>
 </header>
-{% block navbar %} 
+{% block navbar %}
 
 {% endblock %}
