--- a/app/templates/app/basempleado.html
+++ b/app/templates/app/basempleado.html
@@ -1,20 +1,11 @@
 <header class="header" id="header">
   <nav class="navbar navbar-expand-sm bg-info navbar-light">
     <div class="container-fluid">
-      <img
-        src="../static/app/img/libro.png "
-        alt=""
-        style="width: 50px; border-radius: 50%"
-      />
+      <img src="../static/app/img/libro.png " alt="" style="width: 50px; border-radius: 50%" />
       <!--border-raduis le da forma circular al icono -->
 
       <!--AQUI SE ENCUENTRA EL BOTON QUE SE DESPLIEGA HACIA ABAJO EN EL NAVBAR CON SU RESPECTVIOS LINKS-->
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#collapsibleNavbar"
-      >
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
@@ -23,11 +14,13 @@
             <a class="nav-link" href="../listar_cotizaciones">Ver solicitudes de cotizaciones</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../listar_personas">Gestion de cuentas</a>
+            <a class="nav-link" href="../listar_personas">Gestión de cuentas</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="https://accounts.google.com/signin/chrome/sync/identifier?ssp=1&continue=https%3A%2F%2Fwww.google.com%2F&flowName=GlifDesktopChromeSync">Responder cotizaciones por correo</a>
+            <a class="nav-link"
+              href="https://accounts.google.com/signin/chrome/sync/identifier?ssp=1&continue=https%3A%2F%2Fwww.google.com%2F&flowName=GlifDesktopChromeSync">Responder
+              cotizaciones por correo</a>
           </li>
 
           <li class="nav-item">
@@ -38,6 +31,6 @@
     </div>
   </nav>
 </header>
-{% block navbar %} 
+{% block navbar %}
 
 {% endblock %}
