--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -4,20 +4,11 @@
 <header class="header" id="header">
   <nav class="navbar navbar-expand-sm bg-info navbar-light">
     <div class="container-fluid">
-      <img
-        src="../static/app/img/libro.png "
-        alt=""
-        style="width: 50px; border-radius: 50%"
-      />
+      <img src="../static/app/img/libro.png " alt="" style="width: 50px; border-radius: 50%" />
       <!--border-raduis le da forma circular al icono -->
 
       <!--AQUI SE ENCUENTRA EL BOTON QUE SE DESPLIEGA HACIA ABAJO EN EL NAVBAR CON SU RESPECTVIOS LINKS-->
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#collapsibleNavbar"
-      >
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
@@ -29,22 +20,12 @@
             <a class="nav-link" href="../nosotros">Nosotros</a>
           </li>
           <li class="nav-item">
-            <a
-              class="nav-link"
-              data-bs-toggle="tooltip"
-              title="¡AQUÍ PUEDES REGISTRARTE!"
-              href="../registro"
-              >Registrarse</a
-            >
+            <a class="nav-link" data-bs-toggle="tooltip" title="¡AQUÍ PUEDES REGISTRARTE!"
+              href="../registro">Registrarse</a>
           </li>
           <li class="nav-item">
-            <a
-              class="nav-link"
-              data-bs-toggle="tooltip"
-              title="¡AQUÍ PUEDES INICIAR SESIÓN!"
-              href="{% url 'login' %}"
-              >Iniciar sesión</a
-            >
+            <a class="nav-link" data-bs-toggle="tooltip" title="¡AQUÍ PUEDES INICIAR SESIÓN!"
+              href="{% url 'login' %}">Iniciar sesión</a>
           </li>
         </ul>
       </div>
@@ -81,19 +62,12 @@
       <div class="container-fluid">
         <!-- CONTENEDOR-fluid para que el contenedor ocupe los 12 espacios que nos ofrece boostrap  -->
 
-        <div
-          class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 align-items-center"
-        >
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 align-items-center">
           <!--comando aling aliniea los 3 itemps-->
           <!--IMAGEN DE LA IZQUIERDA-->
           <div class="col">
             <div class="card shadow-sm">
-              <img
-                src="../static/app/img/lib1.jpeg "
-                alt=""
-                height="324"
-                width="100%"
-              />
+              <img src="../static/app/img/lib1.jpeg " alt="" height="324" width="100%" />
               <div class="card-body">
                 <div class="d-flex justify-content-center">
                   <h3>El Señor de los Anillos Trilogía</h3>
@@ -101,22 +75,17 @@
                 <div>
                   Un anillo para gobernarlos a todos, un anillo para
                   encontrarlos, un anillo para atraerlos a todos y atarlos en
-                  las Tinieblas". La vida de los hombres y de toda la vida de la
+                  las Tinieblas. La vida de los hombres y de toda la vida de la
                   Tierra Media depende de un joven hobbit.
                 </div>
 
                 <div class="d-flex justify-content-center">
-                  <h4>¡Si quieres comprar registrate!</h4>
+                  <h4>¡Si quieres comprar regístrate!</h4>
                 </div>
 
                 <div class="d-flex justify-content-center">
-                  <a
-                    href="../registro"
-                    class="btn btn-success my-2"
-                    data-bs-toggle="tooltip"
-                    title="¡AQUÍ PUEDES REGISTRARTE!"
-                    >Registrarse gratis</a
-                  >
+                  <a href="../registro" class="btn btn-success my-2" data-bs-toggle="tooltip"
+                    title="¡AQUÍ PUEDES REGISTRARTE!">Registrarse gratis</a>
                 </div>
               </div>
             </div>
@@ -126,19 +95,14 @@
           <!--IMAGEN DEL CENTRO-->
           <div class="col">
             <div class="card shadow-sm">
-              <img
-                src="../static/app/img/harrycolecionista.png "
-                alt=""
-                height="324"
-                width="100%"
-              />
+              <img src="../static/app/img/harrycolecionista.png " alt="" height="324" width="100%" />
               <div class="card-body">
                 <div class="d-flex justify-content-center">
                   <h3>Harry Potter Trilogía</h3>
                 </div>
                 <div>
                   Hazte de la colección completa de los libros de Harry Potter,
-                  la saga más mágica de todos los tiempos. en una edición
+                  la saga más mágica de todos los tiempos. En una edición
                   renovada con las siete novelas. Contando con el rediseño de
                   cubierta a cargo del galardonado ilustrador Jonny Duddle.
                 </div>
@@ -147,13 +111,8 @@
                 </div>
 
                 <div class="d-flex justify-content-center">
-                  <a
-                    href="../registro"
-                    class="btn btn-success my-2"
-                    data-bs-toggle="tooltip"
-                    title="¡AQUÍ PUEDES REGISTRARTE!"
-                    >Registrarse gratis</a
-                  >
+                  <a href="../registro" class="btn btn-success my-2" data-bs-toggle="tooltip"
+                    title="¡AQUÍ PUEDES REGISTRARTE!">Registrarse gratis</a>
                 </div>
               </div>
             </div>
@@ -163,12 +122,7 @@
           <!--IMAGEN DE LA DERECHA-->
           <div class="col">
             <div class="card shadow-sm">
-              <img
-                src="../static/app/img/alines.jpg "
-                alt=""
-                height="324 "
-                width="100%"
-              />
+              <img src="../static/app/img/alines.jpg " alt="" height="324 " width="100%" />
               <div class="card-body">
                 <div class="d-flex justify-content-center">
                   <h3>Aliens</h3>
@@ -177,20 +131,15 @@
                   La trilogía de libros de la película "Aliens" es una serie de
                   novelas de ciencia ficción escritas por el autor
                   estadounidense Alan Dean Foster. La serie se basa en la
-                  exitosa franquicia de películas de "Aliens", creada por el
+                  exitosa franquicia de películas de "Aliens", creada por él
                   director James Cameron.
                 </div>
                 <div class="d-flex justify-content-center">
                   <h4>¡Si quieres comprar registrate!</h4>
                 </div>
                 <div class="d-flex justify-content-center">
-                  <a
-                    href="../registro"
-                    class="btn btn-success my-2"
-                    data-bs-toggle="tooltip"
-                    title="¡AQUÍ PUEDES REGISTRARTE!"
-                    >Registrarse gratis</a
-                  >
+                  <a href="../registro" class="btn btn-success my-2" data-bs-toggle="tooltip"
+                    title="¡AQUÍ PUEDES REGISTRARTE!">Registrarse gratis</a>
                 </div>
               </div>
             </div>
