--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -17,11 +17,11 @@
             <a class="nav-link" href="../index">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../nosotros">Nosotros</a>
+            <a class="nav-link" href="../index">Nosotros</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" data-bs-toggle="tooltip" title="¡AQUÍ PUEDES REGISTRARTE!"
-              href="../registro">Registrarse</a>
+              href="../crear_cliente">Registrarse</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" data-bs-toggle="tooltip" title="¡AQUÍ PUEDES INICIAR SESIÓN!"
