--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -1,63 +1,51 @@
 {% load static %}
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>"Librería imagina"</title>
-    <!--foto pequeña de flores ,de la parte superior -->
-    <link
-      rel="shortcut icon"
-      href="{% static 'app/img/faviconnew.png' %}"
-      type="image/x-icon"
-    />
-    <!--foto pequeña de flores ,de la parte superior -->
 
-    <!--Boostrap 5.1.3-->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>"Librería imagina"</title>
+  <!--foto pequeña de flores ,de la parte superior -->
+  <link rel="shortcut icon" href="{% static 'app/img/faviconnew.png' %}" type="image/x-icon" />
+  <!--foto pequeña de flores ,de la parte superior -->
 
-    <link rel="stylesheet" href="{% static 'app/css/inisesionlibro.css' %}" />
-  </head>
+  <!--Boostrap 5.1.3-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-  <body class="text-center" id="main7">
-    <div class="main" id="main">
-      <section class="py-2 text-center container-fluid">
-        <main
-          class="form-signin d-flex justify-content-center"
-          id="toperegistro2"
-        >
-          {% load crispy_forms_tags %}
-          <div class="formulario">
-            <form action="" method="POST" class="col sm-3">
-              {% csrf_token %} {{ form |crispy}}
-              <button
-                type="submit"
-                class="btn btn-success"
-                data-bs-toggle="tooltip"
-                title="¡INICIA SESIÓN!"
-              >
-                Iniciar sesión
-              </button>
-            </form>
-          </div>
-        </main>
-      </section>
-    </div>
+  <link rel="stylesheet" href="{% static 'app/css/inisesionlibro.css' %}" />
+</head>
 
-    <!--CANCELAR-->
-    <ul class="nav d-flex justify-content-center">
-      <li class="nav-item d-flex justify-content-center">
-        <a class="nav-link" href="../../index">Volver</a>
-      </li>
-    </ul>
+<body class="text-center" id="main7">
+  <div class="main" id="main">
+    <section class="py-2 text-center container-fluid">
+      <main class="form-signin d-flex justify-content-center" id="toperegistro2">
+        {% load crispy_forms_tags %}
+        <div class="formulario">
+          <form action="" method="POST" class="col sm-3">
+            {% csrf_token %} {{ form.as_p}}
+            <button type="submit" class="btn btn-success" title="¡INICIA SESIÓN!">
+              Iniciar sesión
+            </button>
+          </form>
+        </div>
+      </main>
+    </section>
+  </div>
 
-    <!--Parte final de la pagina el footer-->
-    <footer class="py-3 my-4"></footer>
-    <!--Parte final de la pagina el footer-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  </body>
+  <!--CANCELAR-->
+  <ul class="nav d-flex justify-content-center">
+    <li class="nav-item d-flex justify-content-center">
+      <a class="nav-link" href="../../index">Volver</a>
+    </li>
+  </ul>
+
+  <!--Parte final de la pagina el footer-->
+  <footer class="py-3 my-4"></footer>
+  <!--Parte final de la pagina el footer-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
 </html>
